--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "winston": "^3.1.0"
   },
   "devDependencies": {
+    "@types/yargs":"13.0.0",
     "@types/cors": "^2.8.4",
     "@types/documentdb": "^1.10.5",
     "@types/express": "^4.16.0",
@@ -68,7 +69,7 @@
     "gulp-run": "^1.7.1",
     "gulp-text-simple": "^0.4.1",
     "italia-tslint-rules": "^1.1.3",
-    "italia-utils": "aymen94/io-utils#update-dependency",
+    "italia-utils": "aymen94/io-utils-build",
     "jest": "^23.2.0",
     "jest-mock-express": "^0.1.1",
     "lolex": "^2.7.0",
